--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "debug": "~2.2.0",
     "ejs": "~2.4.1",
     "express": "~4.13.4",
+    "fs-extra": "^0.30.0",
+    "moment-timezone": "^0.5.5",
     "morgan": "~1.7.0",
     "request": "^2.75.0",
     "serve-favicon": "~2.3.0"
